[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Prefab/LoadingScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Prefab/Main_Theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Prefab/Arabic_Theme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Prefab/Detail_Theme.tres" type="Theme" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Add_Progress_Bar"
tracks/0/type = "bezier"
tracks/0/path = NodePath("ProgressBar:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.467752, -0.25, 0, 0.25, 0, 0.467752, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ProgressBar:anchor_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ProgressBar:anchor_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.532248, -0.25, 0, 0.25, 0, 0.532248, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ProgressBar:anchor_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=2]
resource_name = "Display_Ayat"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Control/VBoxContainer/Title/ColorRect:anchor_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/VBoxContainer/Meaning:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/VBoxContainer/Meaning/ColorRect2:anchor_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/VBoxContainer/Title/ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.82, 0.9, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.168627, 0.176471, 0.313726, 1 ), Color( 0.168627, 0.176471, 0.313726, 1 ), Color( 0.168627, 0.176471, 0.313726, 0 ), Color( 0.168627, 0.176471, 0.313726, 0 ), Color( 0.168627, 0.176471, 0.313726, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control/VBoxContainer/Meaning/ColorRect2:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.82, 0.9, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.168627, 0.176471, 0.313726, 1 ), Color( 0.168627, 0.176471, 0.313726, 1 ), Color( 0.168627, 0.176471, 0.313726, 0 ), Color( 0.168627, 0.176471, 0.313726, 0 ), Color( 0.168627, 0.176471, 0.313726, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/VBoxContainer/Meaning/ColorRect2:margin_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/VBoxContainer/Meaning/ColorRect2:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/VBoxContainer/Title/ColorRect:anchor_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/VBoxContainer/Title/ColorRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.168627, 0.176471, 0.313726, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control/VBoxContainer/Meaning/ColorRect2:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.168627, 0.176471, 0.313726, 1 ) ]
}

[node name="LoadingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
anchor_left = 0.467752
anchor_top = 1.1
anchor_right = 0.532248
anchor_bottom = 1.1
margin_left = 20.0
margin_top = -40.0
margin_right = -20.0
margin_bottom = -20.0
step = 0.1
rounded = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
autoplay = "Add_Progress_Bar"
reset_on_save = false
anims/Add_Progress_Bar = SubResource( 1 )
anims/Display_Ayat = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="SkippedButton" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
disabled = true
keep_pressed_outside = true

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -300.0
margin_right = 300.0
margin_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -343.5
margin_right = 343.5
margin_bottom = 354.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Control/VBoxContainer"]
unique_name_in_owner = true
margin_right = 687.0
margin_bottom = 262.0
theme = ExtResource( 3 )
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="Control/VBoxContainer/Title"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.168627, 0.176471, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Meaning" type="Label" parent="Control/VBoxContainer"]
unique_name_in_owner = true
margin_top = 266.0
margin_right = 687.0
margin_bottom = 354.0
size_flags_horizontal = 15
size_flags_vertical = 15
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.823529, 0.890196, 0.933333, 1 )
custom_colors/font_outline_modulate = Color( 0.823529, 0.890196, 0.933333, 1 )
custom_colors/font_color_shadow = Color( 0.823529, 0.890196, 0.933333, 1 )
align = 1
valign = 1

[node name="ColorRect2" type="ColorRect" parent="Control/VBoxContainer/Meaning"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
color = Color( 0.168627, 0.176471, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="pressed" from="SkippedButton" to="." method="_on_Skipped_pressed"]
